crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

typedef uint16_t sp_CompressionCode;
/**
 * A vector of bits
 */
typedef struct sp_CBitVec sp_CBitVec;
/**
 * C-wrapper for grid containing brightness values.
 */
typedef struct sp_CBrightnessGrid sp_CBrightnessGrid;
/**
 * A low-level display command.
 *
 * This struct and associated functions implement the UDP protocol for the display.
 *
 * To send a `CCommand`, use a `Connection`.
 */
typedef struct sp_CCommand sp_CCommand;
/**
 * A connection to the display.
 *
 * # Examples
 * ```rust
 * # use servicepoint::Command;
 * let connection = servicepoint::Connection::open("172.23.42.29:2342")
 *     .expect("connection failed");
 *  connection.send(Command::Clear)
 *     .expect("send failed");
 * ```
 */
typedef struct sp_Connection sp_Connection;
/**
 * The raw packet. Should probably not be used directly.
 */
typedef struct sp_Packet sp_Packet;
/**
 * Represents a span of memory (`&mut [u8]` ) as a struct usable by C code.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - accesses to the memory pointed to with `start` is never accessed outside `length`
 * - the lifetime of the `CByteSlice` does not outlive the memory it points to, as described in
 *   the function returning this type.
 */
typedef struct sp_CByteSlice {
    /**
     * The start address of the memory
     */
    uint8_t *start;
    /**
     * The amount of memory in bytes
     */
    size_t length;
} sp_CByteSlice;
/**
 * Type alias for documenting the meaning of the u16 in enum values
 */
typedef size_t sp_Offset;
/**
 * Sets the value of all cells in the `BrightnessGrid`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `value`: the value to set all cells to
 *
 * # Panics
 *
 * - When providing an invalid brightness value
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BrightnessGrid`
 * - `this` is not written to or read from concurrently
 */
void sp_brightness_grid_fill(struct sp_CBrightnessGrid *this_, uint8_t value);
/**
 * Gets the height of the `BrightnessGrid` instance.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BrightnessGrid`
 */
size_t sp_brightness_grid_height(const struct sp_CBrightnessGrid *this_);
/**
 * Sets the value of the specified position in the `BrightnessGrid`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `x` and `y`: position of the cell
 * - `value`: the value to write to the cell
 *
 * returns: old value of the cell
 *
 * # Panics
 *
 * - When accessing `x` or `y` out of bounds.
 * - When providing an invalid brightness value
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 * - `this` is not written to or read from concurrently
 */
void sp_brightness_grid_set(struct sp_CBrightnessGrid *this_,
                            size_t x,
                            size_t y,
                            uint8_t value);
/**
 * Gets an unsafe reference to the data of the `BrightnessGrid` instance.
 *
 * ## Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BrightnessGrid`
 * - the returned memory range is never accessed after the passed `BrightnessGrid` has been freed
 * - the returned memory range is never accessed concurrently, either via the `BrightnessGrid` or directly
 */
struct sp_CByteSlice sp_brightness_grid_unsafe_data_ref(struct sp_CBrightnessGrid *this_);
/**
 * Gets the width of the `BrightnessGrid` instance.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BrightnessGrid`
 */
size_t sp_brightness_grid_width(const struct sp_CBrightnessGrid *this_);
/**
 * Allocates a new `Command::BitmapLinear` instance.
 * The passed `BitVec` gets consumed.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `bit_vec` points to a valid instance of `BitVec`
 * - `bit_vec` is not used concurrently or after this call
 * - `compression` matches one of the allowed enum values
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_bitmap_linear(sp_Offset offset,
                                             struct sp_CBitVec *bit_vec,
                                             sp_CompressionCode compression);
/**
 * Allocates a new `Command::BitmapLinearAnd` instance.
 * The passed `BitVec` gets consumed.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `bit_vec` points to a valid instance of `BitVec`
 * - `bit_vec` is not used concurrently or after this call
 * - `compression` matches one of the allowed enum values
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_bitmap_linear_and(sp_Offset offset,
                                                 struct sp_CBitVec *bit_vec,
                                                 sp_CompressionCode compression);
/**
 * Allocates a new `Command::Brightness` instance for setting the brightness of all tiles to the
 * same value.
 *
 * # Panics
 *
 * - When the provided brightness value is out of range (0-11).
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_brightness(uint8_t brightness);
/**
 * Allocates a new `Command::CharBrightness` instance.
 * The passed `ByteGrid` gets consumed.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `byte_grid` points to a valid instance of `ByteGrid`
 * - `byte_grid` is not used concurrently or after this call
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_char_brightness(size_t x,
                                               size_t y,
                                               struct sp_CBrightnessGrid *byte_grid);
/**
 * Allocates a new `Command::Clear` instance.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_clear(void);
/**
 * Clones a `Command` instance.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid instance of `Command`
 * - `this` is not written to concurrently
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_clone(const struct sp_CCommand *original);
/**
 * Deallocates a `Command`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Command`
 * - `this` is not used concurrently or after this call
 * - `this` was not passed to another consuming function, e.g. to create a `Packet`
 */
void sp_command_dealloc(struct sp_CCommand *ptr);
/**
 * Allocates a new `Command::FadeOut` instance.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_fade_out(void);
/**
 * Allocates a new `Command::HardReset` instance.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_hard_reset(void);
/**
 * Tries to turn a `Packet` into a `Command`. The packet is deallocated in the process.
 *
 * Returns: pointer to new `Command` instance or NULL
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `packet` points to a valid instance of `Packet`
 * - `packet` is not used concurrently or after this call
 * - the result is checked for NULL
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_try_from_packet(struct sp_Packet *packet);
/**
 * Sends a `Packet` to the display using the `Connection`.
 * The passed `Packet` gets consumed.
 *
 * returns: true in case of success
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `connection` points to a valid instance of `Connection`
 * - `packet` points to a valid instance of `Packet`
 * - `packet` is not used concurrently or after this call
 */
bool sp_connection_send(const struct sp_Connection *connection,
                        struct sp_Packet *packet);