crates/servicepoint_binding_cs/ServicePoint/BindGen/ServicePoint.g.cs


        /// <summary>
        ///  Sets the value of the specified position in the `BrightnessGrid`.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to write to
        ///  - `x` and `y`: position of the cell
        ///  - `value`: the value to write to the cell
        ///
        ///  returns: old value of the cell
        ///
        ///  # Panics
        ///
        ///  - When accessing `x` or `y` out of bounds.
        ///  - When providing an invalid brightness value
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        ///  - `this` is not written to or read from concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_set", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_brightness_grid_set(BrightnessGrid* @this, nuint x, nuint y, byte value);

        /// <summary>
        ///  Sets the value of all cells in the `BrightnessGrid`.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to write to
        ///  - `value`: the value to set all cells to
        ///
        ///  # Panics
        ///
        ///  - When providing an invalid brightness value
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BrightnessGrid`
        ///  - `this` is not written to or read from concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_fill", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_brightness_grid_fill(BrightnessGrid* @this, byte value);

        /// <summary>
        ///  Gets the width of the `BrightnessGrid` instance.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to read from
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BrightnessGrid`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_width", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint sp_brightness_grid_width(BrightnessGrid* @this);

        /// <summary>
        ///  Gets the height of the `BrightnessGrid` instance.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to read from
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BrightnessGrid`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_height", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint sp_brightness_grid_height(BrightnessGrid* @this);

        /// <summary>
        ///  Gets an unsafe reference to the data of the `BrightnessGrid` instance.
        ///
        ///  ## Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BrightnessGrid`
        ///  - the returned memory range is never accessed after the passed `BrightnessGrid` has been freed
        ///  - the returned memory range is never accessed concurrently, either via the `BrightnessGrid` or directly
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_unsafe_data_ref", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ByteSlice sp_brightness_grid_unsafe_data_ref(BrightnessGrid* @this);

        /// <summary>
        ///  Tries to turn a `SPPacket` into a `SPCommand`. The packet is deallocated in the process.
        ///
        ///  Returns: pointer to new `SPCommand` instance or NULL
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `packet` points to a valid instance of `SPPacket`
        ///  - `packet` is not used concurrently or after this call
        ///  - the result is checked for NULL
        ///  - the returned `SPCommand` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_try_from_packet", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_try_from_packet(Packet* packet);

        /// <summary>
        ///  Clones a `SPCommand` instance.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid instance of `Command`
        ///  - `this` is not written to concurrently
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_clone(Command* original);

        /// <summary>
        ///  Allocates a new `Command::Clear` instance.
        ///
        ///  Set all pixels to the off state. Does not affect brightness.
        ///
        ///  # Examples
        ///
        ///  ```C
        ///  sp_connection_send(connection, sp_command_clear());
        ///  ```
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_clear", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_clear();

        /// <summary>
        ///  Allocates a new `Command::HardReset` instance.
        ///
        ///  Kills the udp daemon on the display, which usually results in a restart.
        ///  Please do not send this in your normal program flow.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_hard_reset", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_hard_reset();

        /// <summary>
        ///  Allocates a new `Command::FadeOut` instance.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_fade_out", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_fade_out();

        /// <summary>
        ///  Allocates a new `Command::Brightness` instance for setting the brightness of all tiles to the
        ///  same value.
        ///
        ///  # Panics
        ///
        ///  - When the provided brightness value is out of range (0-11).
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - the returned `SPCommand` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_brightness", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_brightness(byte brightness);

        /// <summary>
        ///  Allocates a new `Command::CharBrightness` instance.
        ///  The passed `SPBrightnessGrid` gets consumed.
        ///
        ///  Set the brightness of individual tiles in a rectangular area of the display.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `grid` points to a valid instance of `SPBrightnessGrid`
        ///  - `grid` is not used concurrently or after this call
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_char_brightness", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_char_brightness(nuint x, nuint y, BrightnessGrid* grid);

        /// <summary>
        ///  Allocates a new `Command::BitmapLinear` instance.
        ///  The passed `BitVec` gets consumed.
        ///
        ///  Set pixel data starting at the pixel offset on screen.
        ///
        ///  The screen will continuously overwrite more pixel data without regarding the offset, meaning
        ///  once the starting row is full, overwriting will continue on column 0.
        ///
        ///  The contained `BitVec` is always uncompressed.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `bit_vec` points to a valid instance of `BitVec`
        ///  - `bit_vec` is not used concurrently or after this call
        ///  - `compression` matches one of the allowed enum values
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_bitmap_linear", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_bitmap_linear(nuint offset, BitVec* bit_vec, CompressionCode compression);

        /// <summary>
        ///  Allocates a new `Command::BitmapLinearAnd` instance.
        ///  The passed `BitVec` gets consumed.
        ///
        ///  Set pixel data according to an and-mask starting at the offset.
        ///
        ///  The screen will continuously overwrite more pixel data without regarding the offset, meaning
        ///  once the starting row is full, overwriting will continue on column 0.
        ///
        ///  The contained `BitVec` is always uncompressed.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `bit_vec` points to a valid instance of `BitVec`
        ///  - `bit_vec` is not used concurrently or after this call
        ///  - `compression` matches one of the allowed enum values
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_bitmap_linear_and", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_bitmap_linear_and(nuint offset, BitVec* bit_vec, CompressionCode compression);
